--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.gtoquete.kotlinmvvm.presentation.main.MainViewModel"/>
+    </data>
+
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +19,8 @@
             android:id="@+id/recyclerview_notes"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_notes_list"/>
+            tools:listitem="@layout/item_notes_list"
+            app:items="@{viewModel.notes}"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
