--- a/app/src/main/res/layout/item_notes_list.xml
+++ b/app/src/main/res/layout/item_notes_list.xml
@@ -3,8 +3,8 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.gtoquete.kotlinmvvm.presentation.main.MainViewModel"/>
+            name="note"
+            type="com.gtoquete.kotlinmvvm.data.model.Note"/>
     </data>
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -37,7 +37,7 @@
                     android:textSize="20sp"
                     android:textColor="@android:color/black"
                     android:textStyle="bold"
-                    android:text="@{viewModel.title}"
+                    android:text="@{note.title}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:text="Title"/>
@@ -49,7 +49,7 @@
                     android:layout_margin="10dp"
                     android:textSize="15sp"
                     android:textColor="@android:color/black"
-                    android:text="@{viewModel.content}"
+                    android:text="@{note.content}"
                     app:layout_constraintTop_toBottomOf="@+id/textview_title"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
