Editing and adding notes

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.gtoquete.kotlinmvvm.presentation.main.MainViewModel"/>
+            type="com.gtoquete.kotlinmvvm.viewmodel.MainViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,7 +12,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.main.MainFragment"
+        tools:context=".ui.main.MainFragment"
         tools:showIn="@layout/activity_main">
 
         <android.support.v7.widget.RecyclerView
