--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/AppTheme.NoActionBar"
-    tools:context=".presentation.editnote.EditNoteActivity">
+    tools:context=".ui.editnote.EditNoteActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarlayout"
@@ -25,7 +25,7 @@
 
     <fragment
         android:id="@+id/fragment_edit_note"
-        android:name="com.gtoquete.kotlinmvvm.presentation.editnote.EditNoteFragment"
+        android:name="com.gtoquete.kotlinmvvm.ui.editnote.EditNoteFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:layout="@layout/fragment_edit_note"
