--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -3,8 +3,8 @@
 
     <data>
         <variable
-            name="note"
-            type="com.gtoquete.kotlinmvvm.data.model.Note"/>
+            name="viewModel"
+            type="com.gtoquete.kotlinmvvm.viewmodel.EditNoteViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -23,7 +23,7 @@
             android:textSize="20sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            android:text="@{note.title}"
+            android:text="@={viewModel.title}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Title"/>
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="@{note.content}"
+            android:text="@={viewModel.content}"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
